basic layout of home page with some example styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+    <div id="home">
+        <h1 id="heading">choose your mood.</h1>
+        <div id="buttons">
+            <button id="happy" class="button">Happy</button>
+            <button id="sad" class="button">Sad</button>
+            <button id="confident" class="button">Confident</button>
+            <button id="calm" class="button">Calm</button>
+            <button id="amped" class="button">Amped</button>
+            <button id="random" class="button">Random...</button>
+        </div>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
