--- a/index.html
+++ b/index.html
@@ -1,95 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <div id="home">
-        <h1 id="heading">choose your mood.</h1>
-        <div id="buttons">
-            <button id="happy" class="button">Happy</button>
-            <button id="sad" class="button">Sad</button>
-            <button id="confident" class="button">Confident</button>
-            <button id="calm" class="button">Calm</button>
-            <button id="amped" class="button">Amped</button>
-            <button id="random" class="button">Random...</button>
-        </div>
+      <h1 id="heading">choose your mood.</h1>
+      <div id="buttons">
+        <button id="happy" class="button">Happy</button>
+        <button id="sad" class="button">Sad</button>
+        <button id="confident" class="button">Confident</button>
+        <button id="calm" class="button">Calm</button>
+        <button id="amped" class="button">Amped</button>
+        <button id="random" class="button">Random...</button>
+      </div>
     </div>
-        
+
     <div class="card-container">
-        <div class="card">
-            <div class="card-content">
-                <h2 class="card-title" id="card-title">Something Something</h2>
+      <div class="card" id="card1">
+        <div class="card-content">
+          <h2 class="card-title" id="card-title">Something Something</h2>
 
-                <p class="card-body" id="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, aliquid? Deleniti, illo facere. Quaerat, consequuntur.</p>
-                <div class="card-footer">
-                    <div class="duration" id="duration"></div>
-                    <button href="#" class="btn" id="button">Play</button>
-                    <div class="timeleft" id="timeleft"></div>
-                </div>
-            </div>
+          <p class="card-body" id="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
+            aliquid? Deleniti, illo facere. Quaerat, consequuntur.
+          </p>
+          <div class="card-footer">
+            <div class="duration" id="duration"></div>
+            <button href="#" class="btn" id="button">Play</button>
+            <div class="timeleft" id="timeleft"></div>
+          </div>
         </div>
+      </div>
 
-        <div class="card">
-            <div class="card-content">
-                <h2 class="card-title" id="card-title">Something Something</h2>
+      <div class="card">
+        <div class="card-content">
+          <h2 class="card-title" id="card-title">Something Something</h2>
 
-                <p class="card-body" id="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, aliquid? Deleniti, illo facere. Quaerat, consequuntur.</p>
-                <div class="card-footer">
-                    <div class="duration" id="duration"></div>
-                    <button href="#" class="btn" id="button">Play</button>
-                    <div class="timeleft" id="timeleft"></div>
-                </div>
-            </div>
+          <p class="card-body" id="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
+            aliquid? Deleniti, illo facere. Quaerat, consequuntur.
+          </p>
+          <div class="card-footer">
+            <div class="duration" id="duration"></div>
+            <button href="#" class="btn" id="button">Play</button>
+            <div class="timeleft" id="timeleft"></div>
+          </div>
         </div>
+      </div>
 
-        <div class="card">
-            <div class="card-content">
-                <h2 class="card-title" id="card-title">Something Something</h2>
+      <div class="card">
+        <div class="card-content">
+          <h2 class="card-title" id="card-title">Something Something</h2>
 
-                <p class="card-body" id="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, aliquid? Deleniti, illo facere. Quaerat, consequuntur.</p>
-                <div class="card-footer">
-                    <div class="duration" id="duration"></div>
-                    <button href="#" class="btn" id="button">Play</button>
-                    <div class="timeleft" id="timeleft"></div>
-                </div>
-            </div>
+          <p class="card-body" id="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
+            aliquid? Deleniti, illo facere. Quaerat, consequuntur.
+          </p>
+          <div class="card-footer">
+            <div class="duration" id="duration"></div>
+            <button href="#" class="btn" id="button">Play</button>
+            <div class="timeleft" id="timeleft"></div>
+          </div>
         </div>
+      </div>
 
-        <div class="card">
-            <div class="card-content">
-                <h2 class="card-title" id="card-title">Something Something</h2>
+      <div class="card">
+        <div class="card-content">
+          <h2 class="card-title" id="card-title">Something Something</h2>
 
-                <p class="card-body" id="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, aliquid? Deleniti, illo facere. Quaerat, consequuntur.</p>
-                <div class="card-footer">
-                    <div class="duration" id="duration"></div>
-                    <button href="#" class="btn" id="button">Play</button>
-                    <div class="timeleft" id="timeleft"></div>
-                </div>
-            </div>
+          <p class="card-body" id="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
+            aliquid? Deleniti, illo facere. Quaerat, consequuntur.
+          </p>
+          <div class="card-footer">
+            <div class="duration" id="duration"></div>
+            <button href="#" class="btn" id="button">Play</button>
+            <div class="timeleft" id="timeleft"></div>
+          </div>
         </div>
+      </div>
 
-        <div class="card">
-            <div class="card-content">
-                <h2 class="card-title" id="card-title">Something Something</h2>
+      <div class="card">
+        <div class="card-content">
+          <h2 class="card-title" id="card-title">Something Something</h2>
 
-                <p class="card-body" id="card-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, aliquid? Deleniti, illo facere. Quaerat, consequuntur.</p>
-                <div class="card-footer">
-                    <div class="duration" id="duration"></div>
-                    <button href="#" class="btn" id="button">Play</button>
-                    <div class="timeleft" id="timeleft"></div>
-                </div>
-            </div>
+          <p class="card-body" id="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
+            aliquid? Deleniti, illo facere. Quaerat, consequuntur.
+          </p>
+          <div class="card-footer">
+            <div class="duration" id="duration"></div>
+            <button href="#" class="btn" id="button">Play</button>
+            <div class="timeleft" id="timeleft"></div>
+          </div>
         </div>
-        
+      </div>
     </div>
 
     <script src="assets/js/script.js"></script>
-</body>
-
+  </body>
 </html>
