--- a/index.html
+++ b/index.html
@@ -23,80 +23,85 @@
 
     <div class="card-container">
       <div class="card" id="card1">
-        <div class="card-content">
-          <h2 class="card-title" id="card-title">Something Something</h2>
+        <div class="card-content" id="card-content1">
+          <h2 class="card-title" id="card-title1">Something Something</h2>
 
-          <p class="card-body" id="card-body">
+          <p class="card-body" id="card-body1">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
+          <p class="card-genre" id="card-genre1"></p>
           <div class="card-footer">
             <div class="duration" id="duration"></div>
-            <button href="#" class="btn" id="button">Play</button>
+            <button href="#" class="btn" id="button1">Play</button>
             <div class="timeleft" id="timeleft"></div>
           </div>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-content">
-          <h2 class="card-title" id="card-title">Something Something</h2>
+      <div class="card" id="card2">
+        <div class="card-content" id="card-content2">
+          <h2 class="card-title" id="card-title2">Something Something</h2>
 
-          <p class="card-body" id="card-body">
+          <p class="card-body" id="card-body2">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
+          <p class="card-genre" id="card-genre2"></p>
           <div class="card-footer">
             <div class="duration" id="duration"></div>
-            <button href="#" class="btn" id="button">Play</button>
+            <button href="#" class="btn" id="button2">Play</button>
             <div class="timeleft" id="timeleft"></div>
           </div>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-content">
-          <h2 class="card-title" id="card-title">Something Something</h2>
+      <div class="card" id="card3">
+        <div class="card-content" id="card-content3">
+          <h2 class="card-title" id="card-title3">Something Something</h2>
 
-          <p class="card-body" id="card-body">
+          <p class="card-body" id="card-body3">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
+          <p class="card-genre" id="card-genre3"></p>
           <div class="card-footer">
             <div class="duration" id="duration"></div>
-            <button href="#" class="btn" id="button">Play</button>
+            <button href="#" class="btn" id="button3">Play</button>
             <div class="timeleft" id="timeleft"></div>
           </div>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-content">
-          <h2 class="card-title" id="card-title">Something Something</h2>
+      <div class="card" id="card4">
+        <div class="card-content" id="card-content4">
+          <h2 class="card-title" id="card-title4">Something Something</h2>
 
-          <p class="card-body" id="card-body">
+          <p class="card-body" id="card-body4">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
+          <p class="card-genre" id="card-genre4"></p>
           <div class="card-footer">
             <div class="duration" id="duration"></div>
-            <button href="#" class="btn" id="button">Play</button>
+            <button href="#" class="btn" id="button4">Play</button>
             <div class="timeleft" id="timeleft"></div>
           </div>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-content">
-          <h2 class="card-title" id="card-title">Something Something</h2>
+      <div class="card" id="card5">
+        <div class="card-content" id="card-content5">
+          <h2 class="card-title" id="card-title5">Something Something</h2>
 
-          <p class="card-body" id="card-body">
+          <p class="card-body" id="card-body5">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
+          <p class="card-genre" id="card-genre5"></p>
           <div class="card-footer">
             <div class="duration" id="duration"></div>
-            <button href="#" class="btn" id="button">Play</button>
+            <button href="#" class="btn" id="button5">Play</button>
             <div class="timeleft" id="timeleft"></div>
           </div>
         </div>
