--- a/index.html
+++ b/index.html
@@ -9,36 +9,40 @@
     <link rel="shortcut icon" href="#" />
   </head>
 
-<body>
+  <body>
     <div id="home" class="hero">
-        <h1 id="heading" class="title is-2">Choose your mood</h1>
-        <div id="buttons" class="columns navbar is-centered">
-            <button id="happy" class="button column is-1">Happy</button>
-            <button id="sad" class="button column is-1">Sad</button>
-            <button id="confident" class="button column is-1">Confident</button>
-            <button id="calm" class="button column is-1">Calm</button>
-            <button id="amped" class="button column is-1">Amped</button>
-            <button id="random" class="button column is-1">Random...</button>
-        </div>
+      <h1 id="heading" class="title is-2">Choose your mood</h1>
+      <div id="buttons" class="columns navbar is-centered">
+        <button id="happy" class="button column is-1">Happy</button>
+        <button id="sad" class="button column is-1">Sad</button>
+        <button id="confident" class="button column is-1">Confident</button>
+        <button id="calm" class="button column is-1">Calm</button>
+        <button id="amped" class="button column is-1">Amped</button>
+        <button id="random" class="button column is-1">Random...</button>
+      </div>
     </div>
-        
-    <div class="card-container columns" id="card1">
-        <div class="card column is-2" id="card-body1">
-            <div class="card-content">
-                <h2 class="card-title" id="card-title1">Something Something</h2> 
 
-                <p class="card-body" id="card-body1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, aliquid? Deleniti, illo facere. Quaerat, consequuntur.</p>
-                <div class="card-footer">
-                    <div class="duration" id="duration"></div>
-                    <button href="#" class="btn" id="button1">Play</button>
-                    <div class="timeleft" id="timeleft"></div>
-                </div>
-            </div>
+    <div class="card-container columns" id="card-1">
+      <div class="card column is-2" id="card1">
+        <div class="card-content" id="card-content1">
+          <h2 class="card-title" id="card-title1">Something Something</h2>
+
+          <p class="card-body" id="card-body1">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
+            aliquid? Deleniti, illo facere. Quaerat, consequuntur.
+          </p>
+          <p class="card-genre" id="card-genre1"></p>
+          <div class="card-footer">
+            <div class="duration" id="duration"></div>
+            <button href="#" class="btn" id="button1">Play</button>
+            <div class="timeleft" id="timeleft"></div>
+          </div>
         </div>
+      </div>
 
-        <div class="card column is-2" id="card2">
-            <div class="card-content" id="card-content2">
-                <h2 class="card-title" id="card-title2">Something Something</h2>
+      <div class="card column is-2" id="card2">
+        <div class="card-content" id="card-content2">
+          <h2 class="card-title" id="card-title2">Something Something</h2>
 
           <p class="card-body" id="card-body2">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
@@ -53,9 +57,9 @@
         </div>
       </div>
 
-        <div class="card column is-2" id="card3">
-            <div class="card-content"  id="card-content3">
-                <h2 class="card-title" id="card-title3">Something Something</h2>
+      <div class="card column is-2" id="card3">
+        <div class="card-content" id="card-content3">
+          <h2 class="card-title" id="card-title3">Something Something</h2>
 
           <p class="card-body" id="card-body3">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
@@ -70,9 +74,9 @@
         </div>
       </div>
 
-        <div class="card column is-2" id="card4">
-            <div class="card-content" id="card-content4">
-                <h2 class="card-title" id="card-title4">Something Something</h2>
+      <div class="card column is-2" id="card4">
+        <div class="card-content" id="card-content4">
+          <h2 class="card-title" id="card-title4">Something Something</h2>
 
           <p class="card-body" id="card-body4">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
@@ -87,11 +91,11 @@
         </div>
       </div>
 
-        <div class="card column is-2" id="card5">
-            <div class="card-content" id="card-content5">
-                <h2 class="card-title" id="card-title5">Something Something</h2>
+      <div class="card column is-2" id="card5">
+        <div class="card-content" id="card-content5">
+          <h2 class="card-title" id="card-title5">Something Something</h2>
 
-          <p class="card-body" id="card-body4">
+          <p class="card-body" id="card-body5">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
@@ -103,7 +107,6 @@
           </div>
         </div>
       </div>
-
     </div>
 
     <script src="assets/js/script.js"></script>
