--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
           <p class="card-genre" id="card-genre1"></p>
+          <img id="img1" src="#" />
           <div class="card-footer">
             <div class="duration" id="duration"></div>
             <button href="#" class="btn" id="button1">Play</button>
@@ -49,6 +50,7 @@
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
           <p class="card-genre" id="card-genre2"></p>
+          <img id="img2" src="#" />
           <div class="card-footer">
             <div class="duration" id="duration"></div>
             <button href="#" class="btn" id="button2">Play</button>
@@ -66,6 +68,7 @@
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
           <p class="card-genre" id="card-genre3"></p>
+          <img id="img3" src="#" />
           <div class="card-footer">
             <div class="duration" id="duration"></div>
             <button href="#" class="btn" id="button3">Play</button>
@@ -83,6 +86,7 @@
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
           <p class="card-genre" id="card-genre4"></p>
+          <img id="img4" src="#" />
           <div class="card-footer">
             <div class="duration" id="duration"></div>
             <button href="#" class="btn" id="button4">Play</button>
@@ -100,6 +104,7 @@
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
           </p>
           <p class="card-genre" id="card-genre5"></p>
+          <img id="img5" src="#" />
           <div class="card-footer">
             <div class="duration" id="duration"></div>
             <button href="#" class="btn" id="button5">Play</button>
