--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div id="buttons" class="columns navbar is-centered">
             <button id="happy" class="button column is-1" onclick="showHappy()">Happy</button>
             <button id="sad" class="button column is-1" onclick="showSad()">Sad</button>
-            <button id="confident" class="button column is-1" onclick="showConfident()">Confident</button>
+            <button id="confident" class="button column is-1" onclick="showConfident()" style="font-size: 17px;">Confident</button>
             <button id="calm" class="button column is-1" onclick="showCalm()">Calm</button>
             <button id="amped" class="button column is-1" onclick="showAmped()">Amped</button>
-            <button id="random" class="button column is-1" onclick="showRandom()">Random...</button>
+            <button id="random" class="button column is-1" onclick="showRandom()">Random</button>
         </div>
     </div>
         
