framework for other emotions

--- a/index.html
+++ b/index.html
@@ -11,42 +11,57 @@
 
   <body>
     <div id="home" class="hero">
-        <h1 id="heading" class="title is-2">Choose your mood</h1>
-        <div id="buttons" class="columns navbar is-centered">
-            <button id="happy" class="button column is-1" onclick="showHappy()">Happy</button>
-            <button id="sad" class="button column is-1" onclick="showSad()">Sad</button>
-            <button id="confident" class="button column is-1" onclick="showConfident()">Confident</button>
-            <button id="calm" class="button column is-1" onclick="showCalm()">Calm</button>
-            <button id="amped" class="button column is-1" onclick="showAmped()">Amped</button>
-            <button id="random" class="button column is-1" onclick="showRandom()">Random...</button>
-        </div>
+      <h1 id="heading" class="title is-2">Choose your mood</h1>
+      <div id="buttons" class="columns navbar is-centered">
+        <button id="happy" class="button column is-1" onclick="showHappy()">
+          Happy
+        </button>
+        <button id="sad" class="button column is-1" onclick="showSad()">
+          Sad
+        </button>
+        <button
+          id="confident"
+          class="button column is-1"
+          onclick="showConfident()"
+        >
+          Confident
+        </button>
+        <button id="calm" class="button column is-1" onclick="showCalm()">
+          Calm
+        </button>
+        <button id="amped" class="button column is-1" onclick="showAmped()">
+          Amped
+        </button>
+        <button id="random" class="button column is-1" onclick="showRandom()">
+          Random...
+        </button>
+      </div>
     </div>
-        
-    <div class="card-container columns hide" id="container">
-        <div class="card column is-3" id="card1">
-            <div class="card-content" id="card-content1">
-                <h2 class="card-title" id="card-title1">Something Something</h2> 
 
-                <img src="#" id="img1">
-                <p class="card-body" id="card-body1">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, 
-                  aliquid? Deleniti, illo facere. Quaerat, consequuntur.
-                </p>
-                <p class="card-genre" id="card-genre1"></p>
-                <div class="card-footer">
-                    <div class="duration" id="duration"></div>
-                    <button href="#" class="btn" id="button1">Play</button>
-                    <div class="timeleft" id="timeleft"></div>
-                </div>
-            </div>
+    <div class="card-container columns hide" id="container">
+      <div class="card column is-3" id="card1">
+        <div class="card-content" id="card-content1">
+          <h2 class="card-title" id="card-title1">Something Something</h2>
+
+          <img src="#" id="img1" />
+          <p class="card-body" id="card-body1">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
+            aliquid? Deleniti, illo facere. Quaerat, consequuntur.
+          </p>
+          <p class="card-genre" id="card-genre1"></p>
+          <div class="card-footer">
+            <div class="duration" id="duration"></div>
+            <button href="#" class="btn" id="button1">Play</button>
+            <div class="timeleft" id="timeleft"></div>
+          </div>
         </div>
       </div>
 
-        <div class="card column is-3" id="card2">
-            <div class="card-content" id="card-content2">
-                <h2 class="card-title" id="card-title2">Something Something</h2>
+      <div class="card column is-3" id="card2">
+        <div class="card-content" id="card-content2">
+          <h2 class="card-title" id="card-title2">Something Something</h2>
 
-                <img id="img2" src="#" />
+          <img id="img2" src="#" />
           <p class="card-body" id="card-body2">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
@@ -60,11 +75,11 @@
         </div>
       </div>
 
-        <div class="card column is-3" id="card3">
-            <div class="card-content"  id="card-content3">
-                <h2 class="card-title" id="card-title3">Something Something</h2>
+      <div class="card column is-3" id="card3">
+        <div class="card-content" id="card-content3">
+          <h2 class="card-title" id="card-title3">Something Something</h2>
 
-                <img id="img3" src="#" />
+          <img id="img3" src="#" />
           <p class="card-body" id="card-body3">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
@@ -78,11 +93,11 @@
         </div>
       </div>
 
-        <div class="card column is-3" id="card4">
-            <div class="card-content" id="card-content4">
-                <h2 class="card-title" id="card-title4">Something Something</h2>
+      <div class="card column is-3" id="card4">
+        <div class="card-content" id="card-content4">
+          <h2 class="card-title" id="card-title4">Something Something</h2>
 
-                <img id="img4" src="#" />
+          <img id="img4" src="#" />
           <p class="card-body" id="card-body4">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
@@ -96,11 +111,11 @@
         </div>
       </div>
 
-        <div class="card column is-3" id="card5">
-            <div class="card-content" id="card-content5">
-                <h2 class="card-title" id="card-title5">Something Something</h2>
+      <div class="card column is-3" id="card5">
+        <div class="card-content" id="card-content5">
+          <h2 class="card-title" id="card-title5">Something Something</h2>
 
-                <img id="img5" src="#" />
+          <img id="img5" src="#" />
           <p class="card-body" id="card-body5">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae,
             aliquid? Deleniti, illo facere. Quaerat, consequuntur.
