--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button id="confident" class="button column is-1" onclick="showConfident()">Confident</button>
             <button id="calm" class="button column is-1" onclick="showCalm()">Calm</button>
             <button id="amped" class="button column is-1" onclick="showAmped()">Amped</button>
-            <button id="random" class="button column is-1" onclick="showRandom()">Random...</button>
+            <button id="random" class="button column is-1" onclick="showRandom()">Random</button>
         </div>
     </div>
         
