--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
           <p class="card-genre" id="card-genre5"></p>
         </div>
     </div>
-
+  <footer>
+    &copy; Michael Kendrick, Davon Brown, & Jack Johnson
+  </footer>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
