--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </div>
   <footer>
-    &copy; Michael Kendrick, Davon Brown, & Jack Johnson
+    Created Michael Kendrick, Davon Brown, & Jack Johnson
   </footer>
     <script src="assets/js/script.js"></script>
   </body>
