--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <footer>
       <br>
-      Created Michael Kendrick, Davon Brown, & Jack Johnson
+      Created by Michael Kendrick, Davon Brown, & Jack Johnson
     </footer>
     <script src="assets/js/script.js"></script>
   </body>
